--- a/cv.html
+++ b/cv.html
@@ -192,8 +192,8 @@
         <div class="property">Doctoral supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Grade:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
-        <div class="property">Recognitions:</div><div class="value"><a href="#tiburtius2020">3rd Prize in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></div>
-        <div class="property">Recognitions:</div><div class="value"><a href="#mathplusdissaward2020"><em>MATH+ Dissertation Award 2020</em></a></div>
+        <div class="property">Awards:</div><div class="value"><a href="#tiburtius2020">3rd Prize in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></div>
+        <div class="property"></div><div class="value"><a href="#mathplusdissaward2020"><em>MATH+ Dissertation Award 2020</em></a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duration:</div><div class="value">January 2017 - November 2019</div>
@@ -211,7 +211,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2009-14</h4></div><div class="title"><h4>&emsp;Licenciatura en Matem&aacute;ticas <em>(B. Mathematics)</em></h4></div>
-        <div class="property">Recognitions:</div><div class="value">Best Student Record</div>
+        <div class="property">Awards:</div><div class="value">Best Student Record</div>
         <div class="property"></div><div class="value"><a href="#extraordinaryaward">End of Degree Extraordinary Award</a></div>
         <div class="property"></div><div class="value"><a href="#nationalaward">First Prize in the End of Studies Spanish National Awards</a></div>
         <div class="property">Average grade:</div><div class="value">9.86/10<a href="#grades">***</a> </div>
@@ -963,7 +963,12 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#TAGS2022">2022 Texas Algebraic Geometry Symposium</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Kushnirenko's Fewnomials, the Number of Real Zeros and Condition Numbers<span style="float:right;"><a href="pdf/TAGS2022_poster.pdf">Poster</a></span></div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
         <div class="pretalktitle"></div><div class="talktitle">Ultrametric Smale's <span style="font-variant:normal;">$\alpha$</span>-theory<span style="float:right;"><a href="pdf/ISSAC22_poster.pdf">Poster</a></span></div>
       </div>
 
@@ -1368,7 +1373,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <div class="property">Role:</div><div class="value">Member of the Editorial Committee</div>
         <div class="property"></div><div class="value">Cover designer and desktop publisher (from the 1st to the 9th issue)</div>
         <div class="property"></div><div class="value">Social media manager</div>
-        <div class="property">Recognitions:</div><div class="value"><a href="#premiosehu2012">First prize in the <em>III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU</em></a></div>
+        <div class="property">Awards:</div><div class="value"><a href="#premiosehu2012">First prize in the <em>III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU</em></a></div>
         <div class="property"></div><div class="value"><a href="#cienciaenaccion2013">Honor Mention in the 14th Edition of <em>Ciencia en Acci&oacute;n</em></a></div>
         <div class="property">Hosting institution:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Faculty of Science and Technology (ZTF-FCT)</a> of the <a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
         <div class="property">Date:</div><div class="value">September of 2011 - July of 2014</div>
