--- a/cv_es.html
+++ b/cv_es.html
@@ -197,8 +197,8 @@
         <div class="property">Supervisores doctorales:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Nota:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
-        <div class="property">Reconocimientos:</div><div class="value"><a href="#tiburtius2020">3º Premio en los <em>Premios Tiburtius 2020 de las Universidades de Berlin</em></a></div>
-        <div class="property">Recognitions:</div><div class="value"><a href="#mathplusdissaward2020"><em>Premio MATH+ 2020 para Disertaciones</em></a></div>
+        <div class="property">Premios:</div><div class="value"><a href="#tiburtius2020">3º Premio en los <em>Premios Tiburtius 2020 de las Universidades de Berlin</em></a></div>
+        <div class="property"></div><div class="value"><a href="#mathplusdissaward2020"><em>Premio MATH+ 2020 para Disertaciones</em></a></div>
         <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duraci&oacute;n:</div><div class="value">enero del 2017 - noviembre del 2019</div>
@@ -216,7 +216,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2009-14</h4></div><div class="title"><h4>&emsp;Licenciatura en Matem&aacute;ticas</h4></div>
-        <div class="property">Reconocimientos:</div><div class="value">Premio Mejor Expediente</div>
+        <div class="property">Premios:</div><div class="value">Premio Mejor Expediente</div>
         <div class="property"></div><div class="value"><a href="#extraordinaryaward">Premio Extraordinario Fin de Carrera</a></div>
         <div class="property"></div><div class="value"><a href="#nationalaward">Primer Premio Nacional Fin de Carrera</a></div>
         <div class="property">Nota media:</div><div class="value">9.86/10<a href="#grades">**</a> </div>
@@ -957,7 +957,12 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#TAGS2022">2022 Texas Algebraic Geometry Symposium</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Kushnirenko's Fewnomials, the Number of Real Zeros and Condition Numbers<span style="float:right;"><a href="pdf/TAGS2022_poster.pdf">Poster</a></span></div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
         <div class="pretalktitle"></div><div class="talktitle">Ultrametric Smale's <span style="font-variant:normal;">$\alpha$</span>-theory<span style="float:right;"><a href="pdf/ISSAC22_poster.pdf">P&oacute;ster</a></span></div>
       </div>
 
@@ -1386,7 +1391,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <div class="property">Papel:</div><div class="value">Miembro del comit&eacute; editorial</div>
         <div class="property"></div><div class="value">Dise&ntilde;ador de portadas y maquetador (desde el primer al noveno n&uacute;mero)</div>
         <div class="property"></div><div class="value">Manejo de redes sociales</div>
-        <div class="property">Recognitions:</div><div class="value"><a href="#premiosehu2012">Primer Premio en los <em>III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU</em></a></div>
+        <div class="property">Premios:</div><div class="value"><a href="#premiosehu2012">Primer Premio en los <em>III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU</em></a></div>
         <div class="property"></div><div class="value"><a href="#cienciaenaccion2013">Menci&oacute;n de Honor en la 14º Edici&oacute;n de <em>Ciencia en Acci&oacute;n</em></a></div>
         <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnolog&iacute;a (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del Pa&iacute;s Vasco (UPV/EHU)</a></div>
         <div class="property">Fecha:</div><div class="value">septiembre del 2011 - julio del 2014</div>
