--- a/contact.html
+++ b/contact.html
@@ -108,19 +108,19 @@ San Antonio, Texas 78249<br/>
 USA
 </p>
 <p align="left">
-TOBEUPDATED (office)
+FLN 4.01.04 (office)
 </p>
 
 <!--Place the code below where you want the link to be displayed-->
 <p align="left" id="obf"></p>
 
-<p align="left">
-TOBEUPDATED (phone)
-</p>
-
 <!--<p align="left">
-<span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">Institutional webpage</a></span>
+TOBEUPDATED (phone)
 </p>-->
+
+<p align="left">
+<span><a id="link" href="https://math.utsa.edu/directory/josue-tonelli-cueto/">Institutional webpage</a></span>
+</p>
   </div>
 
   <div class="col-md-4" style="font-size:large;line-height: 3em;vertical-align: bottom;">
