--- a/cv.html
+++ b/cv.html
@@ -638,7 +638,12 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#Santalo2022">XXI Llu&iacute;s Santal&oacute; School: <em>Random and Deterministic Point Configurations</em></a></h4></div>
+         <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#8IMM">8th Iberian Mathematical Meeting</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Why does the Descartes solver work?<span style="float:right;"><a href="pdf/8IMM_slides.pdf">Slides</a></span></div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#Santalo2022">XXI Llu&iacute;s Santal&oacute; School: <em>Random and Deterministic Point Configurations</em></a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">The Grid Method in Numerical Real Algebraic Geometry<span style="float:right;"><a href="pdf/Santalo2022_slides.pdf">Slides</a></span></div>
          </div>
 
