--- a/cv_es.html
+++ b/cv_es.html
@@ -632,18 +632,23 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#Santalo2022">XXI Llu&iacute;s Santal&oacute; School: <em>Random and Deterministic Point Configurations</em></a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">The Grid Method in Numerical Real Algebraic Geometry<span style="float:right;"><a href="pdf/Santalo2022_slides.pdf">Slides</a></span></div>
+         <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#8IMM">8th Iberian Mathematical Meeting</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Why does the Descartes solver work?<span style="float:right;"><a href="pdf/8IMM_slides.pdf">Diapositivas</a></span></div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#Santalo2022">XXI Llu&iacute;s Santal&oacute; School: <em>Random and Deterministic Point Configurations</em></a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">The Grid Method in Numerical Real Algebraic Geometry<span style="float:right;"><a href="pdf/Santalo2022_slides.pdf">Diapositivas</a></span></div>
          </div>
 
          <br/><div class="cv">
          <div class="year"></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">Beyond Worst-Case Analysis for Root Isolation Algorithms<span style="float:right;"><a href="pdf/ISSAC22_slides.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=kv_H87tGEEo">Video</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle">Beyond Worst-Case Analysis for Root Isolation Algorithms<span style="float:right;"><a href="pdf/ISSAC22_slides.pdf">Diapositivas</a> / <a href="https://www.youtube.com/watch?v=kv_H87tGEEo">Video</a></span></div>
          </div>
 
          <br/><div class="cv">
          <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2022">MEGA 2022: Effective Methods in Algebraic Geometry</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">Probabilistic bounds on best rank-one approximation ratio<span style="float:right;"><a href="pdf/MEGA2022_slides.pdf">Slides</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle">Probabilistic bounds on best rank-one approximation ratio<span style="float:right;"><a href="pdf/MEGA2022_slides.pdf">Diapositivas</a></span></div>
          </div>
 
          <br/><div class="cv">
@@ -656,7 +661,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIEF2021">Jornada SIEF y Asamblea General 2021</a></h4></div>
-      <div class="pretalktitle"></div><div class="talktitle">Reacciones qu&iacute;micas, polinomios y sus ceros reales<span style="float:right;"><a href="pdf/SIEF2021_slides.pdf">Slides</a></span></div>
+      <div class="pretalktitle"></div><div class="talktitle">Reacciones qu&iacute;micas, polinomios y sus ceros reales<span style="float:right;"><a href="pdf/SIEF2021_slides.pdf">Diapositivas</a></span></div>
       </div>
 
        <br/><div class="cv">
@@ -667,7 +672,7 @@
 
       <br/><div class="cv">
      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<span style="float:right;"><a href="pdf/SIAM_AG21_poster_slides.pdf">Slides</a>/ <a href="https://www.youtube.com/watch?v=lS7k9y5Qsag">V&iacute;deo</a></span></div>
+       <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<span style="float:right;"><a href="pdf/SIAM_AG21_poster_slides.pdf">Diapositivas</a>/ <a href="https://www.youtube.com/watch?v=lS7k9y5Qsag">V&iacute;deo</a></span></div>
        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia contribuida, enviada como p&oacute;ster)</div>
        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
      </div>
@@ -867,7 +872,7 @@
       <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="http://www.iaa.tu-bs.de/AppliedAlgebra/AAA/">Applied Algebra and Analysis Online Seminar</a></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario Online de &Aacute;lgebra Aplicada y An&aacute;lisis)</em></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<span style="float:right;"><a href="pdf/AAA2021_slides.pdf">Slides</a></span></div>
+       <div class="pretalktitle"></div><div class="talktitle">New condition-based bounds for the number of real zeros<span style="float:right;"><a href="pdf/AAA2021_slides.pdf">Diapositivas</a></span></div>
         <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.tu-braunschweig.de/">Technische Universit&auml;t Braunschweig</a></div>
         <div class="property"></div><div class="value"><a href="https://www.uni-osnabrueck.de/">Universit&auml;t Osnabr&uuml;ck</a></div>
         <div class="property">Lugar:</div><div class="value">Braunschweig y Osnabr&uuml;ck, Alemania (On-line)</div>
