--- a/cv_es.html
+++ b/cv_es.html
@@ -962,8 +962,13 @@
       </div></div>
 
       <br/><div class="cv">
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#5SIAMTXLA">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Probabilistic Bounds on Best Rank-One Approximation Ratio<span style="float:right;"><a href="pdf/5SIAMTXLA_poster.pdf">P&oacute;ster</a></span></div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#TAGS2022">2022 Texas Algebraic Geometry Symposium</a></h4></div>
-        <div class="pretalktitle"></div><div class="talktitle">Kushnirenko's Fewnomials, the Number of Real Zeros and Condition Numbers<span style="float:right;"><a href="pdf/TAGS2022_poster.pdf">Poster</a></span></div>
+        <div class="pretalktitle"></div><div class="talktitle">Kushnirenko's Fewnomials, the Number of Real Zeros and Condition Numbers<span style="float:right;"><a href="pdf/TAGS2022_poster.pdf">P&oacute;ster</a></span></div>
       </div>
 
       <br/><div class="cv">
