--- a/cv.html
+++ b/cv.html
@@ -1008,6 +1008,27 @@
       <h2 class="display-4">Teaching</h2>
       </div></div>
 
+      <!-- Official teaching
+         ================================================== -->
+
+            <br/><div class="row"><div class="col-md-12">
+            <h3>Official teaching</h3>
+            </div></div>
+
+        <!-- 2023
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+          <br/><div class="cv">
+          <div class="year">
+          <h4>2023</h4>
+          </div><div class="title">
+          <h4>&emsp;<i>Calculus II</i> (MATH 2414)&rdquo;</h4></div>
+            <div class="property">Role:</div><div class="value">Instructor</div>
+            <div class="property">Teaching load:</div><div class="value">Approximately 57 hours</div>
+            <div class="property">Institution:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
+            <div class="property">Date:</div><div class="value">January 2023 - May 2023</div>
+          </div>
+
       <!-- 2021
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -1036,22 +1057,12 @@
           <div class="property">Date:</div><div class="value">April of 2018 - July of 2018</div>
         </div>
 
-<!-- 2014
-   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+  <!-- Academic settting
+    ================================================== -->
 
-      <br/><div class="cv">
-      <div class="year">
-      <h4>2013-14</h4>
-      </div><div class="title">
-      <h4>&emsp;Private remedial teacher</h4></div>
-        <div class="property">Description:</div><div class="value">Private lessons to groups of undergraduate students</div>
-        <div class="property">Courses:</div><div class="value"><em>1st year Linear Algebra</em> for mathematicians</div>
-        <div class="property"></div><div class="value"><em>2nd year Linear Algebra</em> for mathematicians</div>
-        <div class="property"></div><div class="value"><em>1st year Mathematics</em> for non-mathematicians</div>
-        <div class="property">Teaching load:</div><div class="value">Approx. 156 hours</div>
-        <div class="property">Institution:</div><div class="value"><a href="https://intecbilbao.wordpress.com/">Centro de Estudios Intec</a></div>
-        <div class="property">Date:</div><div class="value">October of 2013 - May of 2014</div>
-      </div>
+      <br/><div class="row"><div class="col-md-12">
+      <h3>Courses in an academic setting</h3>
+      </div></div>
 
       <br/><div class="cv">
       <div class="year">
@@ -1079,6 +1090,30 @@
         <div class="property">Organizing entity:</div><div class="value">Asociaci&oacute;n de Estudiantes de Matem&aacute;ticas <em>Epsilon-Delta</em> Matematika Ikasleen Elkartea</div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Faculty of Science and Technology (ZTF-FCT)</a> of the <a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
         <div class="property">Date:</div><div class="value">November of 2012 - May of 2013</div>
+      </div>
+
+  <!-- other teaching
+    ================================================== -->
+
+      <br/><div class="row"><div class="col-md-12">
+      <h3>Other</h3>
+      </div></div>
+
+<!-- 2014
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2013-14</h4>
+      </div><div class="title">
+      <h4>&emsp;Private remedial teacher</h4></div>
+        <div class="property">Description:</div><div class="value">Private lessons to groups of undergraduate students</div>
+        <div class="property">Courses:</div><div class="value"><em>1st year Linear Algebra</em> for mathematicians</div>
+        <div class="property"></div><div class="value"><em>2nd year Linear Algebra</em> for mathematicians</div>
+        <div class="property"></div><div class="value"><em>1st year Mathematics</em> for non-mathematicians</div>
+        <div class="property">Teaching load:</div><div class="value">Approx. 156 hours</div>
+        <div class="property">Institution:</div><div class="value"><a href="https://intecbilbao.wordpress.com/">Centro de Estudios Intec</a></div>
+        <div class="property">Date:</div><div class="value">October of 2013 - May of 2014</div>
       </div>
 
 
