--- a/cv_es.html
+++ b/cv_es.html
@@ -1041,6 +1041,21 @@
       <h2 class="display-4">Ense&ntilde;anza</h2>
       </div></div>
 
+      <!-- 2023
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2023</h4>
+      </div><div class="title">
+      <h4>&emsp;<i>Calculus II</i> (MATH 2414)&rdquo;</h4></div>
+      <div class="year"></div><div class="title"><h4>&ensp;&emsp;<em>(<i>C&aacute;lculo II</i> (MATH 2414))</em></h4></div>
+        <div class="property">Labor:</div><div class="value">Instructor</div>
+        <div class="property">Carga docente:</div><div class="value">Approximately 57 hours</div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
+        <div class="property">Fecha:</div><div class="value">enero 2023 - mayo 2023</div>
+      </div>
+
       <!-- 2021
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -1073,6 +1088,55 @@
           <div class="property">Fecha:</div><div class="value">abril del 2018 - julio del 2018</div>
         </div>
 
+        <!-- Academic settting
+          ================================================== -->
+
+            <br/><div class="row"><div class="col-md-12">
+            <h3>Cursos en un contexto académico</h3>
+            </div></div>
+
+        <!-- 2014
+             YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+        <br/><div class="cv">
+        <div class="year">
+        <h4>2014</h4>
+        </div><div class="title">
+        <h4>&emsp;Course &ldquo;Groups of units in complete discrete valuations rings&rdquo;</h4></div>
+        <div class="year"></div><div class="title">
+        <h4>&ensp;&emsp;<em>(Curso &ldquo;Grupos de unidades en anillos completos con valuaci&oacute;n discreta&rdquo;)</em></h4></div>
+          <div class="property">Labor:</div><div class="value">Ponente</div>
+          <div class="property">Carga docente:</div><div class="value">4 horas</div>
+          <div class="property">Organising group:</div><div class="value"><a href="https://www.ehu.eus/en/web/greca/hasiera">GRECA Research group</a></div>
+          <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnolog&iacute;a (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del Pa&iacute;s Vasco (UPV/EHU)</a></div>
+          <div class="property">Fecha:</div><div class="value">febrero del 2014</div>
+        </div>
+
+  <!-- 2013
+     YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+        <br/><div class="cv">
+        <div class="year">
+        <h4>2012-13</h4>
+        </div><div class="title">
+        <h4>&emsp;&ldquo;\(\mathsf{P}\) vs. \(\mathsf{NP}\) and related Temas&rdquo; Seminar</h4></div>
+        <div class="year"></div><div class="title">
+        <h4>&ensp;&emsp;<em>(Seminario &ldquo;\(\mathsf{P}\) contra \(\mathsf{NP}\) y temas relacionados&rdquo;)</em></h4></div>
+          <div class="property">Descripci&oacute;n:</div><div class="value">Seminario que tratab varios temas en teor&iacute;a de la complejidad</div>
+          <div class="property">Labor:</div><div class="value">Co-organizador (junto con <a href="https://www.ehu.eus/bilatu/buscar/seekuser.php?lang=es&u=bXRwbWFmZWw=">Luis Mart&iacute;nez</a>) y ponente principal</div>
+          <div class="property">Carga docente:</div><div class="value">30 hours</div>
+          <div class="property">Entidad organizadora:</div><div class="value">Asociaci&oacute;n de Estudiantes de Matem&aacute;ticas <em>Epsilon-Delta</em> Matematika Ikasleen Elkartea</div>
+          <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnolog&iacute;a (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del Pa&iacute;s Vasco (UPV/EHU)</a></div>
+          <div class="property">Fecha:</div><div class="value">noviembre del 2012 - mayo del 2013</div>
+        </div>
+
+        <!-- other teaching
+          ================================================== -->
+
+            <br/><div class="row"><div class="col-md-12">
+            <h3>Otros</h3>
+            </div></div>
+
 <!-- 2014
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -1090,37 +1154,7 @@
         <div class="property">Fecha:</div><div class="value">octubre del 2013 - mayo del 2014</div>
       </div>
 
-      <br/><div class="cv">
-      <div class="year">
-      <h4>2014</h4>
-      </div><div class="title">
-      <h4>&emsp;Course &ldquo;Groups of units in complete discrete valuations rings&rdquo;</h4></div>
-      <div class="year"></div><div class="title">
-      <h4>&ensp;&emsp;<em>(Curso &ldquo;Grupos de unidades en anillos completos con valuaci&oacute;n discreta&rdquo;)</em></h4></div>
-        <div class="property">Labor:</div><div class="value">Ponente</div>
-        <div class="property">Carga docente:</div><div class="value">4 horas</div>
-        <div class="property">Organising group:</div><div class="value"><a href="https://www.ehu.eus/en/web/greca/hasiera">GRECA Research group</a></div>
-        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnolog&iacute;a (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del Pa&iacute;s Vasco (UPV/EHU)</a></div>
-        <div class="property">Fecha:</div><div class="value">febrero del 2014</div>
-      </div>
 
-<!-- 2013
-   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
-
-      <br/><div class="cv">
-      <div class="year">
-      <h4>2012-13</h4>
-      </div><div class="title">
-      <h4>&emsp;&ldquo;\(\mathsf{P}\) vs. \(\mathsf{NP}\) and related Temas&rdquo; Seminar</h4></div>
-      <div class="year"></div><div class="title">
-      <h4>&ensp;&emsp;<em>(Seminario &ldquo;\(\mathsf{P}\) contra \(\mathsf{NP}\) y temas relacionados&rdquo;)</em></h4></div>
-        <div class="property">Descripci&oacute;n:</div><div class="value">Seminario que tratab varios temas en teor&iacute;a de la complejidad</div>
-        <div class="property">Labor:</div><div class="value">Co-organizador (junto con <a href="https://www.ehu.eus/bilatu/buscar/seekuser.php?lang=es&u=bXRwbWFmZWw=">Luis Mart&iacute;nez</a>) y ponente principal</div>
-        <div class="property">Carga docente:</div><div class="value">30 hours</div>
-        <div class="property">Entidad organizadora:</div><div class="value">Asociaci&oacute;n de Estudiantes de Matem&aacute;ticas <em>Epsilon-Delta</em> Matematika Ikasleen Elkartea</div>
-        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.ehu.eus/en/web/ztf-fct/">Facultad de Ciencia y Tecnolog&iacute;a (ZTF-FCT)</a> de la <a href="https://www.ehu.eus/en/">Universidad del Pa&iacute;s Vasco (UPV/EHU)</a></div>
-        <div class="property">Fecha:</div><div class="value">noviembre del 2012 - mayo del 2013</div>
-      </div>
 
 
 
