--- a/cv.html
+++ b/cv.html
@@ -753,7 +753,7 @@
 
 
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://math.sciences.ncsu.edu/event/symbolic-computation-seminar-josue-tonelli-cueto-san-antonio-state-university-computing-numerically-the-homology-of-semialgebraic-sets/">Symbolic Computation Seminar</a><span style="float:right;"><!--<a href="pdf/22NCSUseminar_slides.pdf">Slides</a></span>--></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://math.sciences.ncsu.edu/event/symbolic-computation-seminar-josue-tonelli-cueto-san-antonio-state-university-computing-numerically-the-homology-of-semialgebraic-sets/">Symbolic Computation Seminar</a><span style="float:right;"><a href="pdf/NCSU22_seminar_talk.pdf">Slides</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing numerically the homology of semialgebraic sets</div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.ncsu.edu/">North Carolina State University</a></div>
         <div class="property">Location:</div><div class="value">Raleigh, USA</div>
