--- a/cv_es.html
+++ b/cv_es.html
@@ -773,7 +773,7 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://math.sciences.ncsu.edu/event/symbolic-computation-seminar-josue-tonelli-cueto-san-antonio-state-university-computing-numerically-the-homology-of-semialgebraic-sets/">Symbolic Computation Seminar</a><span style="float:right;"><!--<a href="pdf/22NCSUseminar_slides.pdf">Diapositivas</a></span>--></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://math.sciences.ncsu.edu/event/symbolic-computation-seminar-josue-tonelli-cueto-san-antonio-state-university-computing-numerically-the-homology-of-semialgebraic-sets/">Symbolic Computation Seminar</a><span style="float:right;"><a href="pdf/NCSU22_seminar_talk.pdf">Diapositivas</a></span></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario de Computaci&oacute;n Simb&oacute;lica)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing numerically the homology of semialgebraic sets</div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.ncsu.edu/">North Carolina State University</a></div>
