--- a/cv.html
+++ b/cv.html
@@ -360,13 +360,30 @@
       <h2 class="display-4">Organized activities</h2>
       </div></div>
 
-      <!-- 2022
+      <!-- 2023
       YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+			<span id="jovenesrsme2023sesionespecial"></span>
+       <br/><div class="cv">
+       <div class="year">
+       <h4>2023</h4>
+       </div><div class="title">
+       <h4>&emsp;Sesi&oacute;n Especial <em>Geometr&iacute;a Algebraica II: Aplicaciones y Computaci&oacute;n</em></h4></div>
+       <div class="year"></div><div class="title">
+       <h4>&ensp;&emsp;<em>(Special Session <em>Algebraic Geometry II: Applications and Computation</em>)</em></h4></div>
+       <div class="year"></div><div class="title">
+       <h4>&#160;&#160;at the <a href="#jovenesrsme2023">VI Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+         <div class="property">Description:</div><div class="value">3 sessions and 12 talks</div>
+         <div class="property">Organizer:</div><div class="value">Josu&eacute; Tonelli-Cueto, and <a href="https://sites.google.com/view/angelica-torres/">Ang&eacute;lica Torres</a></div>
+         <div class="property">Location:</div><div class="value">Le&oacute;n, Spain</div>
+         <div class="property">Date:</div><div class="value">6th to 11th of February of 2023</div>
+       </div>
 
       <span id="JMM2023MRCsession"></span>
        <br/><div class="cv">
        <div class="year">
-       <h4>2023</h4>
+
        </div><div class="title">
        <h4>&emsp;AMS Special Session on <em>Data Science at the Crossroads of Analysis, Geometry, and Topology</em><br/>(a Mathematics Research Communities session)</h4></div>
        <div class="year"></div><div class="title">
@@ -377,6 +394,9 @@
          <div class="property">Location:</div><div class="value">Boston, Massachusetts, USA</div>
          <div class="property">Date:</div><div class="value">4th to 7th of January of 2023</div>
        </div>
+
+			 <!-- 2022
+       YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <span id="RSMEUMA2022sesionespecial"></span>
        <br/><div class="cv">
@@ -1854,10 +1874,36 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="JMM2023"></span>
+<span id="BIRS2023"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2023</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://www.birs.ca/events/2023/5-day-workshops/23w5070">Workshop &ldquo;Random Algebraic Geometry&rdquo; (23w5070)</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Paul Breiding, Sonja Petrovic and Gregory G. Smith</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.birs.ca">Banff International Research Station for Mathematical Innovation and Discovery</a></div>
+  <div class="property">Location:</div><div class="value">Banff, Canada</div>
+  <div class="property">Date:</div><div class="value">16th to 21st of April of 2023</div>
+</div>
+
+<span id="jovenesrsme2023"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://rsmejovenes23.unileon.es/">VI Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(VI Conference of Young Researcher of the Spanish Royal Mathematical Society)</em></h4></div>
+  <div class="property">Organizer:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.unileon.es/">Universidad de Le&oacute;n</a></div>
+  <div class="property">Location:</div><div class="value">Le&oacute;n, Spain</div>
+  <div class="property">Date:</div><div class="value">6th to 11th of February of 2023</div>
+</div>
+
+<span id="JMM2023"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_intro">Joint Mathematics Meetings 2023</a></h4></div>
   <div class="property">Organizer:</div><div class="value">JMM 2023 Partners &ndash; <button onclick="show(2201)">Show/Hide list</button></div><div style="display:none;" id="JMMpartners">
@@ -2014,7 +2060,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2021</h4>
 </div><div class="title">
-<h4>&emsp;<a href="https://www.birs.ca/events/2021/5-day-workshops/21w5117">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></h4></div>
+<h4>&emsp;<a href="https://www.birs.ca/events/2021/5-day-workshops/21w5117">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo; (21w5117)</a></h4></div>
   <div class="property">Organizer:</div><div class="value">Fr&eacute;d&eacute;ric Bihan, Timo de Wolff, Alicia Dickenstein and Thorsten Theobald</div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.birs.ca">Banff International Research Station for Mathematical Innovation and Discovery</a></div>
   <div class="property">Location:</div><div class="value">Casa Matem&aacute;tica Oaxaca, Oaxaca, Mexico (On-line por la COVID-19)</div>
