--- a/cv_es.html
+++ b/cv_es.html
@@ -371,10 +371,25 @@
       <h2 class="display-4">Actividades organizadas</h2>
       </div></div>
 
-      <span id="JMM2023MRCsession"></span>
+			<span id="jovenesrsme2023sesionespecial"></span>
        <br/><div class="cv">
        <div class="year">
        <h4>2023</h4>
+       </div><div class="title">
+       <h4>&emsp;Sesi&oacute;n Especial <em>Geometr&iacute;a Algebraica II: Aplicaciones y Computaci&oacute;n</em></h4></div>
+			 <div class="year"></div><div class="title">
+       <h4>&#160;&#160;en el <a href="#jovenesrsme2023">VI Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+         <div class="property">Descripci&oacute;n:</div><div class="value">3 sesiones y 12 charlas</div>
+         <div class="property">Organizador:</div><div class="value">Josu&eacute; Tonelli-Cueto, y <a href="https://sites.google.com/view/angelica-torres/">Ang&eacute;lica Torres</a></div>
+         <div class="property">Lugar:</div><div class="value">Le&oacute;n, Espa&ntilde;a</div>
+         <div class="property">Fecha:</div><div class="value">del 6 al 11 de febrero del 2023</div>
+       </div>
+
+      <span id="JMM2023MRCsession"></span>
+       <br/><div class="cv">
+       <div class="year">
+
        </div><div class="title">
        <h4>&emsp;AMS Special Session on <em>Data Science at the Crossroads of Analysis, Geometry, and Topology</em><br/>(a Mathematics Research Communities session)</h4></div>
        <div class="year"></div><div class="title">
@@ -382,7 +397,7 @@
        <div class="year"></div><div class="title">
        <h4>&#160;&#160;en los <a href="#JMM2023">Joint Mathematics Meetings 2023</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
-         <div class="property">Descripci&oacute;n:</div><div class="value">2 sessions and 16 talks</div>
+         <div class="property">Descripci&oacute;n:</div><div class="value">2 sesiones y 16 charlas</div>
          <div class="property">Organizador:</div><div class="value"><a href="https://www.hiteshgakhar.com/">Hitesh Gakhar</a>, <a href="https://www.math.ucla.edu/~harlin/">Harlin Lee</a>, y Josu&eacute; Tonelli-Cueto</div>
          <div class="property">Lugar:</div><div class="value">Boston, Massachusetts, USA</div>
          <div class="property">Fecha:</div><div class="value">del 4 al 7 de enero del 2023</div>
@@ -1040,6 +1055,13 @@
       <div class="row"><div class="col-md-12">
       <h2 class="display-4">Ense&ntilde;anza</h2>
       </div></div>
+
+		<!-- Official teaching
+       ================================================== -->
+
+          <br/><div class="row"><div class="col-md-12">
+          <h3>Ense&ntilde;anza oficial</h3>
+          </div></div>
 
       <!-- 2023
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
@@ -1876,10 +1898,36 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <!-- To come
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+	 <span id="BIRS2023"></span>
+	 <br/><div class="cv">
+	 <div class="year">
+	 <h4>2023</h4>
+	 </div><div class="title">
+	 <h4>&emsp;<a href="http://www.birs.ca/events/2023/5-day-workshops/23w5070">Workshop &ldquo;Random Algebraic Geometry&rdquo; (23w5070)</a></h4></div>
+	 <div class="year"></div><div class="title">
+	 <h4>&ensp;&emsp;<em>(Taller &ldquo;Geometr&iacute;a Algebraica Aleatoria&rdquo;)</em></h4></div>
+	   <div class="property">Organizador:</div><div class="value">Paul Breiding, Sonja Petrovic and Gregory G. Smith</div>
+	   <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.birs.ca">Banff International Research Station for Mathematical Innovation and Discovery</a></div>
+	   <div class="property">Lugar:</div><div class="value">Banff, Canad&aacute;</div>
+	   <div class="property">Fecha:</div><div class="value">del 16 al 21 de abril del 2023</div>
+	 </div>
+
+	 <span id="jovenesrsme2023"></span>
+	 <br/><div class="cv">
+	 <div class="year">
+
+	 </div><div class="title">
+	 <h4>&emsp;<a href="https://rsmejovenes23.unileon.es/">VI Congreso de J&oacute;venes Investigadores de la RSME</a></h4></div>
+	   <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
+	   <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.unileon.es/">Universidad de Le&oacute;n</a></div>
+	   <div class="property">Lugar:</div><div class="value">Le&oacute;n, Espa&ntilde;a</div>
+	   <div class="property">Fecha:</div><div class="value">del 6 al 11 de febrero del 2023</div>
+	 </div>
+
    <span id="JMM2023"></span>
    <br/><div class="cv">
    <div class="year">
-   <h4>2023</h4>
+
    </div><div class="title">
    <h4>&emsp;<a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_intro">Joint Mathematics Meetings 2023</a></h4></div>
    <div class="year"></div><div class="title">
@@ -2054,7 +2102,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2021</h4>
 </div><div class="title">
-<h4>&emsp;<a href="https://www.birs.ca/events/2021/5-day-workshops/21w5117">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo;</a></h4></div>
+<h4>&emsp;<a href="https://www.birs.ca/events/2021/5-day-workshops/21w5117">Workshop &ldquo;Real Polynomials: Counting and Stability&rdquo; (21w5117)</a></h4></div>
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(Taller &ldquo;Polinomios Reales: Conteo y Estabilidad&rdquo;)</em></h4></div>
   <div class="property">Organizador:</div><div class="value">Fr&eacute;d&eacute;ric Bihan, Timo de Wolff, Alicia Dickenstein y Thorsten Theobald</div>
