--- a/non-research_es.html
+++ b/non-research_es.html
@@ -148,7 +148,7 @@
     </div></div>
     <span id="fetescience2022"></span>
     <br/><div class="cv"><div class="year"><h4>2022</h4></div><div class="title">
-    <h4>&emsp;F&ecirc;te de la Science 2022 <em>(2-7/may/2022)</em><a class="btn btn-pikasle" href="./imgs/FeteDeLaScience2022.jpeg" role="button">P&oacute;r del Evento</a></h4></div>
+    <h4>&emsp;F&ecirc;te de la Science 2022 <em>(2-7/may/2022)</em><a class="btn btn-pikasle" href="./imgs/FeteDeLaScience2022.jpeg" role="button">P&oacute;ster del Evento</a></h4></div>
         <div class="pretalktitle"></div><div class="collaborator">Semana de la ciencia con actividades diarias abiertas al p&uacute;blico general en franc&eacute;s, español e ingl&eacute;s. El evento fue organizado por el <a href="https://www.colesp.org/">Colegio de Espa&ntilde;a</a>, el <a href="https://www.colesp.org/index.php/es/residentes">Comit&eacute; de Residentes del Colegio de Espa&ntilde;a</a> y la <a href="https://siefrancia.com/">Sociedad de Investigadores Espa&ntilde;oles en Francia (SIEF)</a>, y tuvo lugar en el <a href="https://www.colesp.org/">Colegio de Espa&ntilde;a</a> en Par&iacute;s entre el 2 y el 7 de mayo del 2022.</div>
         <div class="pretalktitle"></div><div class="collaborator">Actu&eacute; como co-organizador representando a la <a href="https://siefrancia.com/">Sociedad de Investigadores Espa&ntilde;oles en Francia (SIEF)</a>.</div>
     </div>
